<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFragment"
    android:id="@+id/Add_Fragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="40dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/nameObject"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="14sp"
        android:layout_marginTop="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:ems="10"
        android:hint="@string/nameHint"
        android:inputType="text"

        />
    <EditText
        android:id="@+id/serial_numberObj"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:ems="10"
        android:hint="@string/serial_numberHint"
        app:layout_constraintHorizontal_bias="0.8"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/nameObject"
        tools:ignore="TextFields" />
    <EditText
        android:id="@+id/placeObj"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:ems="10"
        android:hint="@string/placeHint"
        app:layout_constraintHorizontal_bias="0.8"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/serial_numberObj"

        tools:ignore="TextFields" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/add_objBtn"
        android:text="@string/addObj"
        android:backgroundTint="@color/colorButton"
        android:layout_marginBottom="70dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>